--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,24 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.zhou.myfirst">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat"
-        >
-
+        android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
-           <!-- <intent-filter>
+
+            <!--
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
+            -->
         </activity>
         <activity android:name=".ScoreActivity">
+
+            <!--
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            -->
+        </activity>
+        <activity
+            android:name=".Week3Activity"
+            android:label="@string/title_activity_week3">
+
+            <!--
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            -->
+        </activity>
+        <activity
+            android:name=".ExchangeActivity"
+            android:label="@string/title_activity_exchange">
+
+            <!--
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            -->
+        </activity>
+        <activity
+            android:name=".SavemoneyActivity"
+            android:label="@string/title_activity_savemoney" />
+        <activity
+            android:name=".ListActivity"
+            android:label="@string/title_activity_list">
+
+            <!--
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            -->
+        </activity>
+        <!--
+        <activity
+            android:name=".SimpleListActivity"
+            android:label=".SimpleListActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        -->
+        <activity
+            android:name=".EmptylistActivity"
+            android:label="@string/title_activity_emptylist" />
+        <activity
+            android:name=".RatelistActivity"
+            android:label="@string/title_activity_ratelist" />
+        <activity
+            android:name=".ListclickActivity"
+            android:label="@string/title_activity_listclick">
+
+            <!--
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            -->
+        </activity>
+        <activity
+            android:name=".DBHelperlistActivity"
+            android:label="@string/title_activity_dbhelperlist">
+
+            <!--
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            -->
+        </activity>
+        <activity
+            android:name=".beibei.Main2Activity"
+            android:label="@string/title_activity_main2">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,26 +121,25 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Week3Activity"
-            android:label="@string/title_activity_week3">
-           <!-- <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:name=".beibei.MyBeibeiActivity"
+            android:label="@string/title_activity_my_beibei" />
+        <activity
+            android:name=".beibei.SinglewordActivity"
+            android:label="@string/title_activity_singleword" />
+        <activity
+            android:name=".FrageActivity"
+            android:label="@string/title_activity_frage">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
         <activity
-            android:name=".ExchangeActivity"
-            android:label="@string/title_activity_exchange">
-           <!-- <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
-        </activity>
-        <activity
-            android:name=".SavemoneyActivity"
-            android:label="@string/title_activity_savemoney"></activity>
+            android:name=".beibei.SpellwordActivity"
+            android:label="@string/title_activity_spellword" />
     </application>
 
 </manifest>
